[project]
name = "ComfyUI-Qwen3-ASR"
description = "Qwen3 ASR model custom node for ComfyUI."
version = "1.0.2"
license = "LICENSE.md"
dependencies = ["torch", "numpy", "qwen-asr", "transformers", "accelerate"]

[project.urls]
Repository = "https://github.com/kaushiknishchay/ComfyUI-Qwen3-ASR"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "kaushik"
DisplayName = "ComfyUI-Qwen3-ASR"
Icon = ""
